# LOGIC2RL

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
src/logic2rl/: __init__.py  builder.py  config.py  data_loader.py  dataset.py  det_ops.py  index_manager.py  logging.py  runner.py  utils.py
src/logic2rl/algorithm/: __init__.py  base.py
src/logic2rl/algorithm/policy/: README.md  __init__.py  actor_critic.py  base.py  extractor.py  layers.py  network.py  protocol.py
src/logic2rl/algorithm/ppo/: __init__.py  config.py  evaluator.py  loss.py  metrics.py  ppo.py  rollout.py
src/logic2rl/callbacks/: __init__.py  _base.py  _checkpoint.py  _display.py  _early_stopping.py  _eval.py  _manager.py  _metrics.py
src/logic2rl/env/: README.md  __init__.py  component.py  core.py  env.py  memory.py  proof_components.py  unification_logic.py
src/logic2rl/nn/: __init__.py  _blocks.py  atom_embedders.py  embeddings.py  state_embedders.py
src/logic2rl/unification/: __init__.py
src/logic2rl/unification/base/: __init__.py  engine.py  joint.py  kb.py  resolution.py  soft.py
src/logic2rl/unification/enumerate/: __init__.py  engine.py
src/logic2rl/unification/join/: __init__.py  engine.py
src/logic2rl/unification/sld/: __init__.py  engine.py  kb.py  resolution.py
tests/: test_smoke.py
